--- a/admin/app/pages/cliente/cliente.html
+++ b/admin/app/pages/cliente/cliente.html
@@ -45,24 +45,24 @@
               </select>
             </div>
             <div class="col-md-6 col-sm-12">
-              <div class="form-group pull-right mt-lg" style="position: relative;z-index: 10">
+              <div class="form-group pull-right mt-lg" style="position: relative;z-index: 10" ng-show="c.gridOptions.data.length > 0">
                 <button class="btn btn-default" ng-click='c.btnExportarListaPdf()' title="Exportar a PDF">
                   <i class="fa fa-file-pdf-o text-danger f-18" ></i>
                 </button>
               </div>
-              <div class="form-group pull-right mt-lg mr" style="position: relative;z-index: 10">
+              <div class="form-group pull-right mt-lg mr" style="position: relative;z-index: 10" ng-if="fSessionCI.key_grupo == 'key_root' || fSessionCI.key_grupo == 'key_admin'">
                 <button class="btn btn-success" ng-click='c.btnNuevo()'>Nuevo</button>
               </div>
-              <div class="form-group pull-right mt-lg mr" style="position: relative;z-index: 10">
+              <div class="form-group pull-right mt-lg mr" style="position: relative;z-index: 10" ng-if="fSessionCI.key_grupo == 'key_admin' || fSessionCI.key_grupo == 'key_super' ">
                 <button class="btn btn-warning" ng-click='c.btnImportarExcel()'>Subir Excel</button>
               </div>
-              <div class="form-group pull-right mt-lg mr" style="position: relative;z-index: 10">
+              <div class="form-group pull-right mt-lg mr" style="position: relative;z-index: 10" ng-if="fSessionCI.key_grupo == 'key_admin' || fSessionCI.key_grupo == 'key_super' ">
                 <button class="btn btn-primary" ng-click='c.btnProcesarZip()'>Asignar Fotos y Videos</button>
               </div>
               <!-- <div class="form-group pull-right mt-lg mr" style="position: relative;z-index: 10">
                 <button class="btn btn-primary" ng-click='c.btnOrganizarImagenes()'>Organizar Imágenes</button>
               </div> -->
-              <div class="form-group pull-right mt-lg mr" style="position: relative;z-index: 10">
+              <div class="form-group pull-right mt-lg mr" style="position: relative;z-index: 10" ng-if="fSessionCI.key_grupo == 'key_root' || fSessionCI.key_grupo == 'key_admin'">
                 <button ng-show="c.mySelectionGrid.length > 0" class="btn btn-danger" ng-click='c.btnAnular()'>Eliminar</button>
               </div>
             </div>
@@ -86,13 +86,13 @@
       <div class="tile">
         <!-- tile header -->
         <section class="tile-header">
-          <h1 class="heading">Subir Imagenes de Clientes</h1>
+          <h1 class="heading"><span ng-show="c.fDataUpload.editar">Subir </span>Fotografias de Clientes</h1>
           <div class="controls">
             <div class="btn-group" uib-dropdown>
               <button class="btn btn-transparent" uib-dropdown-toggle><i class="fa fa-cog"></i></button>
               <ul class="dropdown-menu dropdown-menu-custom" uib-dropdown-menu role="menu">
                 <li role="menuitem"><a href="javascript:;" minotaur-tile-minimize></a></li>
-                <li role="menuitem"><a href="javascript:;"ng-click="c.getPaginationServerSide()" minotaur-tile-refresh></a></li>
+                <li role="menuitem"><a href="javascript:;" ng-click="c.getPaginationServerSide()" minotaur-tile-refresh></a></li>
                 <li role="menuitem"><a href="javascript:;" minotaur-tile-fullscreen></a></li>
                 <li role="menuitem"><a href="javascript:;" minotaur-tile-lightbox></a></li>
               </ul>
@@ -108,14 +108,14 @@
               <div class="form-group">
                 <h4 class="heading mt-n col-md-6">CÓDIGO: {{c.fDataUpload.codigo}}</h4>
                 <div class="form-group pull-right" style="position: relative;z-index: 10">
-                    <button class="btn btn-success" ng-click='c.btnSubir()'>
+                    <button class="btn btn-success" ng-click='c.btnSubir()' ng-if="c.fDataUpload.editar">
                       <i class="halcyon-icon-upload"></i> Subir Fotografias</button>
                     <button class="btn btn-warning" ng-click='c.btnVolver()'>
                       <i class="halcyon-icon-back"></i> Regresar</button>
                 </div>
               </div>
               <div class="form-group mt-lg" style="position: relative;z-index: 10">
-                <div class="form-group" ng-show="c.uploadBtn">
+                <div class="form-group" ng-show="c.uploadBtn && c.fDataUpload.editar">
                   <label class="col-md-12 control-label minotaur-label">Seleccione</label>
                   <div class="form-group col-md-3">
                     <input type="file" nv-file-select="" uploader="uploader" multiple class="filestyle" filestyle="{ buttonText: 'Select file', iconName: 'fa fa-inbox' }" accept=".jpeg, .jpg, .mp4, .mkv, .avi, .dvd, .mov"/><br/>
@@ -189,7 +189,7 @@
                 </div>
                 <div class="form-group col-md-12">
                   <div class="form-group" ng-if="c.length_images > 0">
-                    <ul class="mix-controls">
+                    <ul class="mix-controls" ng-if="c.fDataUpload.editar">
                       <li class="select-all">
                         <label class="checkbox minotaur-checkbox inline-block m-0">Seleccionar Todo
                           <input type="checkbox" ng-model="selectedAll" ng-click="c.selectAll()"><div class="input-indicator"></div>
@@ -224,7 +224,7 @@
                                   <i class="fa fa-circle-o" ng-show="!image.selected"></i>
                                   <i class="fa fa-circle" ng-show="image.selected"></i>
                                 </a>
-                                <a href="javascript:;" class="img-link" ng-click="c.btnAnularArchivo(image)">
+                                <a href="javascript:;" class="img-link" ng-click="c.btnAnularArchivo(image)" ng-if="c.fDataUpload.editar">
                                   <i class="fa fa-trash"></i>
                                 </a>
                                 <a class="img-preview" href="{{image.src}}" title="{{image.title}}" ng-if="image.tipo_archivo == 1">
