--- a/admin/app/pages/mi-galeria/gallery.html
+++ b/admin/app/pages/mi-galeria/gallery.html
@@ -1,3 +1,7 @@
+<style type="text/css">
+  .modal-backdrop{display: none!important;}
+  .modal-open{overflow: inherit;}
+</style>
 <div class="page page-extra pull-to-header">
   <ol class="breadcrumb bg-white">
     <li><a ui-sref="dashboard">{{ 'Menu.DASHBOARD' | translate }}</a></li>
