--- a/admin/app/pages/cliente/cliente.html
+++ b/admin/app/pages/cliente/cliente.html
@@ -50,7 +50,7 @@
                   <i class="fa fa-file-pdf-o text-danger f-18" ></i>
                 </button>
               </div>
-              <div class="form-group pull-right mt-lg mr" style="position: relative;z-index: 10" ng-if="fSessionCI.key_grupo == 'key_root' || fSessionCI.key_grupo == 'key_admin'">
+              <div class="form-group pull-right mt-lg mr" style="position: relative;z-index: 10" ng-if="fSessionCI.key_grupo == 'key_root'">
                 <button class="btn btn-success" ng-click='c.btnNuevo()'>Nuevo</button>
               </div>
               <div class="form-group pull-right mt-lg mr" style="position: relative;z-index: 10" ng-if="fSessionCI.key_grupo == 'key_admin' || fSessionCI.key_grupo == 'key_super' ">
