--- a/admin/app/pages/tienda/tienda.html
+++ b/admin/app/pages/tienda/tienda.html
@@ -102,7 +102,7 @@
           >
             <div class="masonry-brick col-md-3 col-sm-6 m-20 mix {{image.category}}" ng-class="{'selected': image.selected}" ng-repeat="image in ctrl.images">
 
-              <div class="img-container ">
+              <div class="img-container" ng-if="image.tipo_archivo == 1">
                 <!-- <div class="ribbon-wrapper-green" ng-if="image.descargado == 1"><div class="ribbon-green">SOLD!</div></div> -->
                 <img class="img-responsive" ng-src="{{image.src}}" alt="">
                 <div class="">
@@ -120,6 +120,14 @@
                   </div>
                 </div>
               </div>
+
+              <div class="img-container" ng-if="image.tipo_archivo == 2">
+                <video style="width: 100%; height: auto; padding: 10px" controls>
+                  <source src="{{image.nombre_archivo}}" type="video/mp4">
+                  Your browser does not support the video tag.
+                </video>
+              </div>
+
             </div>
           </div>
         </div>
