--- a/admin/app/pages/tienda/tienda.html
+++ b/admin/app/pages/tienda/tienda.html
@@ -71,22 +71,20 @@
           </div>
         </section>
 
-        <ul class="mix-controls">
-          <!-- <li class="select-all" ng-class="{'disabled': !ctrl.images.length}">
-            <label class="checkbox minotaur-checkbox inline-block m-0" >{{ 'Text.TODOS' | translate }}
-              <input type="checkbox" ng-model="selectedAll" ng-click="ctrl.selectAll()" ng-disabled="!ctrl.images.length"><div class="input-indicator"></div>
-            </label>
-          </li> -->
+        <div class="row controls">
+          <div class="form-group col-sm-12" >
+              <button class="btn-lg btn btn-info f-24 pull-right" ng-class="{'disabled': !ctrl.isSelected, 'active': ctrl.isSelected}" ng-click="ctrl.verResumen();">
+                <i class="halcyon-icon-next"></i> {{ 'Form.NEXT' | translate }}
+              </button>
+          </div>
+        </div>
 
+       <!--  <ul class="row mix-controls">
           <li class="btn btn-lg ml-md pull-right" ng-class="{'disabled': !ctrl.isSelected, 'active': ctrl.isSelected}" ng-click='ctrl.verResumen();'>
-            <a href="javascript:;" class="f-18"><i class="halcyon-icon-next" ></i> {{ 'Form.NEXT' | translate }}</a>
+            <a href="javascript:;" class="f-24"><i class="halcyon-icon-next" ></i> {{ 'Form.NEXT' | translate }}</a>
           </li>
+        </ul> -->
 
-         <!--  <li class="pull-right select-all" style="font-size: 15px;font-weight: 600">
-            <i class="fa fa-shopping-cart" ></i> <span style="color:#1199d3;">{{ctrl.monto_total}}</span></a>
-          </li> -->
-        </ul>
-        <br>
         <div class="row mix-grid">
           <div class="gallery" ng-mixitup magnific-popup="{
             delegate: 'a.img-preview',
@@ -134,11 +132,18 @@
         <div class="row waterMarkEmptyData" ng-show="!ctrl.images.length" style="position: relative; top: 0;">
           NO PICTURES
         </div>
-        <ul class="mix-controls">
+        <div class="row controls">
+          <div class="form-group col-sm-12" >
+              <button class="btn-lg btn btn-info f-24 pull-right" ng-class="{'disabled': !ctrl.isSelected, 'active': ctrl.isSelected}" ng-click="ctrl.verResumen();">
+                <i class="halcyon-icon-next"></i> {{ 'Form.NEXT' | translate }}
+              </button>
+          </div>
+        </div>
+        <!-- <ul class="row mix-controls">
           <li class="btn-lg btn pull-right" ng-class="{'disabled': !ctrl.isSelected, 'active': ctrl.isSelected}" ng-click='ctrl.verResumen();'>
-            <a href="javascript:;" class="f-18"><i class="halcyon-icon-next" ></i> {{ 'Form.NEXT' | translate }}</a>
+            <a href="javascript:;" class="f-24"><i class="halcyon-icon-next" ></i> {{ 'Form.NEXT' | translate }}</a>
           </li>
-        </ul>
+        </ul> -->
       </div>
 
       <div class="tile p-15" ng-if="ctrl.modoPagar">
@@ -149,7 +154,7 @@
           </div>
           <div class="controls">
             <div class="form-group pull-right" >
-                <button class="btn-lg btn btn-warning" style="font-size:18px;color:#fff;" ng-click="ctrl.btnVolver()">
+                <button class="btn-lg btn btn-warning" style="font-size:24px;color:#fff;" ng-click="ctrl.btnVolver()">
                   <i class="halcyon-icon-back"></i> {{ 'Form.PREVIOUS' | translate }}
                 </button>
                 <!-- <div class="pull-right mt-10 ml-10" style="font-size: 15px;font-weight: 600">
@@ -201,7 +206,7 @@
           </div>
           <br>
           <div class="col-sm-12 mt">
-            <button class="btn-lg btn btn-success btn-ef btn-ef-5 btn-ef-5b mb-10 pull-right" ng-click="ctrl.btnPagar()"><i class="fa fa-dollar"></i> <span>{{ 'Text.PAGAR' | translate }}</span></button>
+            <button class="btn-lg btn btn-success btn-ef btn-ef-5 btn-ef-5b mb-10 pull-right f-24" ng-click="ctrl.btnPagar()"><i class="fa fa-dollar"></i> <span>{{ 'Text.PAGAR' | translate }}</span></button>
           </div>
         </div>
         <!-- GALERIA RESUMEN -->
