--- a/admin/index.html
+++ b/admin/index.html
@@ -256,9 +256,9 @@
     <!-- APLICATIVO -->
 
     <script src="app/pages/dashboard/dashboard.controller.js"></script>
-    <script src="app/pages/banner/banner.controller.js"></script>
+    <!-- <script src="app/pages/banner/banner.controller.js"></script> -->
     <script src="app/pages/seccion/seccion.controller.js"></script>
-    <script src="app/pages/tipobanner/tipobanner.controller.js"></script>
+    <!-- <script src="app/pages/tipobanner/tipobanner.controller.js"></script> -->
     <script src="app/pages/config/config.controller.js"></script>
     <script src="app/pages/blog/blog.controller.js"></script>
     <script src="app/pages/ajustes/ajustes.controller.js"></script>
@@ -278,6 +278,7 @@
     <script src="app/pages/encuesta/encuesta.controller.js"></script>
     <script src="app/pages/mensaje/mensaje.controller.js"></script>
     <script src="app/pages/pago/pago.controller.js"></script>
+    <script src="app/pages/reportes/reportes.controller.js"></script>
 
     <script src="app/components/directives/vector-map.directive.js"></script>
     <script src="app/components/directives/validate-on-submit.directive.js"></script>
