--- a/admin/app/pages/cliente/cliente.html
+++ b/admin/app/pages/cliente/cliente.html
@@ -33,7 +33,7 @@
               <select class="form-control"
                       ng-model="c.fBusqueda.filtroExcursiones" ng-change="c.getPaginationServerSide(true);"
                       ng-options="item.descripcion for item in c.listaExcursionesFiltro"
-                      aria-invalid="false" style="">
+                      aria-invalid="false">
               </select>
             </div>
             <div class="form-group col-md-3 col-sm-12 mb">
@@ -41,7 +41,7 @@
               <select class="form-control"
                       ng-model="c.fBusqueda.filtroProcesados" ng-change="c.getPaginationServerSide(true);"
                       ng-options="item.descripcion for item in c.listaProcesadosFiltro"
-                      aria-invalid="false" style="" >
+                      aria-invalid="false" >
               </select>
             </div>
             <div class="col-md-6 col-sm-12">
@@ -170,7 +170,7 @@
 
                     <div>
                         <div>
-                            <div class="progress" style="">
+                            <div class="progress">
                                 <div class="progress-bar" role="progressbar" ng-style="{ 'width': uploader.progress + '%' }"></div>
                             </div>
                         </div>
