--- a/admin/app/pages/encuesta/encuesta.html
+++ b/admin/app/pages/encuesta/encuesta.html
@@ -32,7 +32,7 @@
             <div class="col-xs-12 col-md-4 text-right pr-0">
               <div class="score" aria-label="Valoración: {{enc.promedio}} estrellas de cinco">{{enc.promedio}}</div>
               <div class="star-ratings-css pull-right">
-                <div class="star-ratings-css-top" style="width: {{enc.porcentaje}}%">
+                <div class="star-ratings-css-top" ng-style="{ 'width': enc.porcentaje + '%' }">
                   <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
                 </div>
                 <div class="star-ratings-css-bottom">
